navbar styling. compononent automatically resizes and navbar elements no longer overlap.  all links are live

--- a/client/app/styles/navbar.css
+++ b/client/app/styles/navbar.css
@@ -2,17 +2,25 @@
 
 .root {
   margin-bottom: 20px;
-  max-width: 100%;
+  min-width: 99.9%;
   padding: 10px;
+  display:table;
   /*margin: 50px auto;*/
   background-color: #424B54;
   border-radius: 20px;
 }
 
+.ul {
+  width: inherit;
+  padding-left: 0;
+}
+
 .navItem {
+  resize: inherit;
   color: white;
-  padding: 10px;
+  padding: 8px;
   margin: 9px;
+  display: inline-block;
   background-color: #ED6A5A;
   border-style: solid;
   border-color: white;
@@ -23,5 +31,6 @@
 
 .navItem:hover {
   transition: all 2s;
+  border-radius: 20px;
   background-color: #cb2a16;
 }
